[project]
name = "cyberdolphin"
description = "Cyberdolphin Suite of ComfyUI nodes for wiring up things."
version = "1.0.0"
license = "LICENSE"
dependencies = ["openai ~= 1.2.3", "gradio_client", "numpy", "pillow"]

[project.urls]
Repository = "https://github.com/whatbirdisthat/cyberdolphin"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "cyberdolphin"
Icon = ""
