[project]
name = "cyberdolphin"
description = "Cyberdolphin nodes for wiring up OpenAI and compatible LLM APIs."
version = "1.0.0"
license = "LICENSE"
dependencies = ["openai ~= 1.2.3", "gradio_client", "numpy", "pillow"]

[project.urls]
Repository = "https://github.com/whatbirdisthat/cyberdolphin"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "whatbirdisthat"
DisplayName = "cyberdolphin"
Icon = "dolphin"
